Added a print button for the channel list only. Almost got it to print with formatting...

--- a/RiderGen/static/content/styles.css
+++ b/RiderGen/static/content/styles.css
@@ -58,12 +58,6 @@ ul {
   text-align: left;
 }
 
-.sublist {
-  list-style-type: circle;
-  text-align: left;
-  margin-left: 20px;
-}
-
 input[type=checkbox] {
   width: 1px;
   height: 1px;
@@ -278,6 +272,7 @@ fieldset {
 }
 
 .channel_table {
+  width: 90%;
   margin: 20px 10px;
   border: 3px solid black;
   border-collapse: collapse;
@@ -292,6 +287,23 @@ th, td {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media print {
+  * {
+    transition: none !important;
+  }
+
+  .channel_list_info {
+    align-items: center;
+  }
+
+  .channel_table {
+    width: 100%;
+    border: 3px solid black;
+    border-collapse: collapse;
+    font-size: 11px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
