--- a/RiderGen/templates/channels.html
+++ b/RiderGen/templates/channels.html
@@ -291,6 +291,7 @@
             </div>
             <div class="center">
                 <button class="btn btn-primary" type="submit" id="update">Update</button>
+                <button class="btn btn-primary" type="button" id="print">Print</button>
             </div>
         </form>
     </div>
