--- a/RiderGen/templates/channelsub.html
+++ b/RiderGen/templates/channelsub.html
@@ -1,10 +1,10 @@
 ﻿<!-- html fragment to add channel list into channels page without rendering the whole thing-->
-<div class="d-flex bd-highlight mb-3">
+<div class="channel_list_info d-flex bd-highlight mb-3">
     <div class="mr-auto p-2 bd-highlight" style="font-size:150%"><b>{{ act_name }}</b></div>
     <div class="p-2 bd-highlight"> Contact: {{ contact_name }}</div>
     <div class="p-2 bd-highlight"> On: {{ contact_details }}</div>
 </div>
-<table style="width:90%" class="channel_table">
+<table class="channel_table">
     <tr>
         <th>Channel no.</th>
         <th>Instrument</th>
