--- a/RiderGen/static/content/styles.scss
+++ b/RiderGen/static/content/styles.scss
@@ -70,10 +70,11 @@ h3 {
     color: darkslategrey;
     text-align: center;
 }
-
-ul {
-    list-style-type: square;
-    text-align: left;
+// Intro block styling
+.intro {
+    background-color: lavender;
+    margin: 20px 0px 20px 0px;
+    padding: 40px;
 }
 
 // Stuff to make the button toggling make sense
@@ -249,7 +250,7 @@ fieldset {
     border-radius: 15px;
 }
 
-.channel_table {
+#channel_table {
     width: 90%;
     margin: 20px 10px;
     border: 3px solid black;
@@ -258,7 +259,14 @@ fieldset {
 
 th, td {
     border: 2px solid black;
-    padding: 3px;
+}
+
+th {
+    text-align: center;
+}
+
+td {
+    padding: 3px 10px;
 }
 
 .center {
@@ -269,9 +277,6 @@ th, td {
 
 // Hide bits that don't need to be printed when printing
 @media print {
-    * {
-        transition: none !important
-    }
 
     .channel_list_info {
         align-items: center;
@@ -279,9 +284,6 @@ th, td {
 
     .channel_table {
         width: 100%;
-        border: 3px solid black;
-        border-collapse: collapse;
-        font-size: 11px;
     }
     
 }
