Added autoincrementing integer primary keys to the tables instead of relying on their names. Adjusted views.py to reflect that, also made the SQL request more specific instead of selecting * . Fixed stereo button for strings tracks that was the wrong way round.

--- a/RiderGen/templates/channels.html
+++ b/RiderGen/templates/channels.html
@@ -209,7 +209,7 @@
                             <input type="checkbox" id="pb_strings" name="instrument" value="pb_strings_l"/>
                             <label for="pb_strings" class="pb_channels stl">Strings</label>
                             <input type="checkbox" id="pb_strings_r" name="instrument" value="pb_strings_r" checked disabled/>
-                            <label for="pb_strings_r" class="st stereo">stereo</label>
+                            <label for="pb_strings_r" class="st stereo disabled">stereo</label>
                         </div>
                         <div class="options_holder">
                             <input type="checkbox" id="pb_bvs" name="instrument" value="pb_bvs_l" />
