--- a/RiderGen/static/content/styles.scss
+++ b/RiderGen/static/content/styles.scss
@@ -94,6 +94,12 @@ fieldset {
     position: relative;
 }
 
+// Keep text input boxes the right size
+input[type=text] {
+    width: 100%;
+    overflow: hidden;
+}
+
 // Form styling
 
 #formbar {
@@ -251,7 +257,6 @@ fieldset {
 }
 
 #channel_table {
-    width: 90%;
     margin: 20px 10px;
     border: 3px solid black;
     border-collapse: collapse;
