Changed print function to open window straight away to avoid being blocked by the browser. Nearly got export to csv working properly, just need to stop multiple iterations. Added "add channel" button and tidied up some js around renumbering channels and calling defined functions for print and .csv.

--- a/RiderGen/templates/channelprint.html
+++ b/RiderGen/templates/channelprint.html
@@ -27,27 +27,13 @@
     <tbody>
         {% for channel in channel_list %}
         <tr>
-            <td>
-                {{ loop.index }}
-            </td>
-            <td>
-                {{ channel["inst"] }}
-            </td>
-            <td>
-                {{ channel["mic"] }}
-            </td>
-            <td>
-                {{ channel["stand"] }}
-            </td>
-            <td>
-                {{ channel["pos"] }}
-            </td>
-            <td>
-                {{ channel["phnt"] }}
-            </td>
-            <td>
-                {{ channel["notes"] }}
-            </td>
+            <td> {{ loop.index }} </td>
+            <td> {{ channel["inst"] }} </td>
+            <td> {{ channel["mic"] }} </td>
+            <td> {{ channel["stand"] }} </td>
+            <td> {{ channel["pos"] }} </td>
+            <td> {{ channel["phnt"] }} </td>
+            <td> {{ channel["notes"] }} </td>
         </tr>
         {% endfor %}
     </tbody>
