--- a/RiderGen/templates/index.html
+++ b/RiderGen/templates/index.html
@@ -10,11 +10,11 @@
 {% block intro %}
 
 <p>
-    Keeping your rider accurate and up to date is an extremely important life skill. Sometimes though, you're really short on time or you
+    Keeping your channel list accurate and up to date is an extremely important life skill. Sometimes though, you're really short on time or you
     don't know where to start. Maybe you don't really know what kind of mics work best on what instruments? Don't panic, we've got you covered.
-    Just tell us what your act consists of and we'll generate a rider and channel list for you. It's fully customisable, so you can add and
-    delete channels, change mics or add notes. Then save it as a pdf (not a word doc! You don't want people to accidentally change it without
-    you knowing!) and send it to the promoter in a timely manner. A timely. Manner.
+    Just tell us what your act consists of and we'll generate a channel list for you. It's fully customisable, so you can add and delete channels, 
+    change mics or add notes. Then you can download it as a .csv file to use in spreadsheets, or save it as a pdf (not a word doc! You don't want 
+    people to accidentally change it without you knowing!) and send it to the promoter in a timely manner. A timely. Manner.
 </p>
 
 {% endblock %}
