--- a/RiderGen/templates/layout.html
+++ b/RiderGen/templates/layout.html
@@ -47,6 +47,7 @@
         {% block intro %}{% endblock %}
     </div>
     <div class="container-fluid">
+        <div style="display:none" class="alert alert-danger"> </div>
         {% block content %}{% endblock %}
     </div>
     <!-- Optional JavaScript -->
