--- a/RiderGen/templates/index.html
+++ b/RiderGen/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block nav_home %}active{% endblock %}
 
-{% block heading %} Welcome to RiderGen! {% endblock %}
+{% block heading %} Welcome to ChannelGen! {% endblock %}
 {% block subheading %} It'll be great {% endblock %}
 
 {% block intro %}
@@ -17,4 +17,42 @@
     people to accidentally change it without you knowing!) and send it to the promoter in a timely manner. A timely. Manner.
 </p>
 
+{% endblock %}
+
+{% block content %}
+<div class="row">
+    <div class="col-md-8">
+        <img src="../static/content/images/stageplotmeme.jpg" alt="Woman screaming at cat in restaurant meme. Woman says 
+             'That's not our current stage plot!' Cat says 'That's the stage plot you sent me!" />
+        <p class="caption">
+            Not keeping your paperwork up to date can cause major issues on gig day.
+        </p>
+    </div>
+
+    <div class="col-md-4">
+        <p></p>
+        <p>
+            This site deals with channel lists, which are the most important aspect of the audio rider, if not the entire rider.
+            It doesn't matter what kind of hummous you have in the dressing room if you don't have the right gear to put the
+            gig on. Stage plots are the second most important, and a stage plot generator is coming soon. I have tried to make
+            the site as intuitive and user friendly as possible. Some features can be tricky to use on touchscreens, but it 
+            is possible! Just keep trying! 
+        </p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <p>        </p>
+        <p>
+            
+        </p>
+    </div>
+    <div class="col-md-8">
+        <img src="../static/content/images/stageplotmeme2.png" alt="Is this a thing meme. An artist looks at a butterfly, 
+             labelled 'Crudely hand-drawn jumble of indecipherable shapes' and says 'Is this a stage plot?'" />
+        <p class="caption">
+            Help us to help you, with a clear channel list at least. Stage plots coming soon!
+        </p>
+    </div>
+</div>
 {% endblock %}
