--- a/RiderGen/templates/layout.html
+++ b/RiderGen/templates/layout.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1"><i>RiderGen</i></span>
+        <span class="navbar-brand mb-0 h1"><i>ChannelGen</i></span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
     <div class="intro container-fluid">
         {% block intro %}{% endblock %}
     </div>
-    <div class="container-fluid">
+    <div class="content container-fluid">
         <div style="display:none" class="alert alert-danger"> </div>
         {% block content %}{% endblock %}
     </div>
@@ -56,7 +56,7 @@
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <!--<script src="jquery.ui.touch-punch.min.js"></script>-->
+    <script src="../static/scripts/jquery.ui.touch-punch.js"></script>
     <script src="../static/scripts/channels.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
