--- a/RiderGen/templates/channels.html
+++ b/RiderGen/templates/channels.html
@@ -39,13 +39,13 @@
         </div>
         <form id="the_form">
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="actname" placeholder="Name of your act" type="text">
+                <input autocomplete="off" name="actname" placeholder="Name of your act" type="text">
             </div>
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="contactname" placeholder="Name of who to contact" type="text">
+                <input autocomplete="off" name="contactname" placeholder="Name of who to contact" type="text">
             </div>
             <div class="form-group">
-                <input autocomplete="off" autofocus class="form-control" name="contactdets" placeholder="Contact details" type="text">
+                <input autocomplete="off" name="contactdets" placeholder="Contact details" type="text">
             </div>
             <div class="sortable">
                 <div>
