--- a/RiderGen/templates/index.html
+++ b/RiderGen/templates/index.html
@@ -10,11 +10,12 @@
 {% block intro %}
 
 <p>
-    Keeping your channel list accurate and up to date is an extremely important life skill. Sometimes though, you're really short on time or you
-    don't know where to start. Maybe you don't really know what kind of mics work best on what instruments? Don't panic, we've got you covered.
-    Just tell us what your act consists of and we'll generate a channel list for you. It's fully customisable, so you can add and delete channels, 
-    change mics or add notes. Then you can download it as a .csv file to use in spreadsheets, or save it as a pdf (not a word doc! You don't want 
-    people to accidentally change it without you knowing!) and send it to the promoter in a timely manner. A timely. Manner.
+    Keeping your channel list accurate and up to date is an extremely important life skill. Sometimes though, you're really 
+    short on time or you don't know where to start. Maybe you don't really know what kind of mics work best on what instruments?
+    Don't panic, we've got you covered. Just tell us what your act consists of and we'll generate a channel list for you. 
+    It's fully customisable, so you can add and delete channels, change mics or add notes. Then you can download it as a .csv 
+    file to use in spreadsheets, or save it as a .pdf (not a word .doc! You don't want people to accidentally change it without 
+    you knowing!) and send it to the promoter in a timely manner. A timely. Manner.
 </p>
 
 {% endblock %}
@@ -28,7 +29,6 @@
             Not keeping your paperwork up to date can cause major issues on gig day.
         </p>
     </div>
-
     <div class="col-md-4">
         <p></p>
         <p>
@@ -42,12 +42,9 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <p>        </p>
-        <p>
-            
-        </p>
     </div>
     <div class="col-md-8">
+        <p></p>
         <img src="../static/content/images/stageplotmeme2.png" alt="Is this a thing meme. An artist looks at a butterfly, 
              labelled 'Crudely hand-drawn jumble of indecipherable shapes' and says 'Is this a stage plot?'" />
         <p class="caption">
